--- a/phylogenize_app/templates/index.html
+++ b/phylogenize_app/templates/index.html
@@ -103,7 +103,7 @@
         form_entry(form.which_envir, "Enter the name of the environment in
         which you want to calculate prevalence or specificity.") }}
       </ul>
-
+      {{ form.recaptcha }}<p>
       <input type="submit" value="Submit" formmethod="post"><br>
 
     </form>
