--- a/phylogenize_app/templates/results.html
+++ b/phylogenize_app/templates/results.html
@@ -7,6 +7,12 @@
 {% block content %}
 <h1><span>phylogenize</span></h1>
 <h2>v0.1 alpha</h2>
+
+<h3>Notes</h3>
+<ul><li>Your results will be accessible to anyone with this URL
+  <li>Results will be automatically deleted 7 days after finishing
+</ul>
+
 <h3>Results</h3>
 
   {% if completed %}
