--- a/phylogenize_app/static/phylo.css
+++ b/phylogenize_app/static/phylo.css
@@ -58,6 +58,13 @@ font-size: 80%;
 	padding: 25px;
 	border: 1px dashed #888888;
 }
+div.errors {
+  font-size: 60%;
+  line-height: 1;
+  width: 60%;
+  background-color: #FF0000;
+  color: #FFFFFF;
+}
 pre.outfile {
 	font-size: 8pt;
 	line-height: 1;
