--- a/phylogenize_app/templates/base.html
+++ b/phylogenize_app/templates/base.html
@@ -40,7 +40,7 @@
 
 			<footer class="footer">
 				<div class="container-fluid">
-					Patrick H. Bradley, Pollard lab
+					Bradley and Pollard (submitted).
 				</div>
 			</footer>
 
