--- a/phylogenize_app/templates/results.html
+++ b/phylogenize_app/templates/results.html
@@ -60,7 +60,7 @@ $('head').append('<meta http-equiv="refresh" content="300"/>');
 <ul><li>Your results will be accessible to anyone with this URL, so only share
     it with people whom you want to see the output.
     <li>You need this URL to access your results. An easy way to keep this URL
-      is to bookmark it. (If you misplace the URL, you may be able to find it in
+      is to bookmark it. (If you misplace the URL, you may also be able to find it in
       your browser history.)
   <li>Jobs will be automatically deleted approximately 7 days after
     finishing. Please download your results before then.
