--- a/phylogenize_app/templates/results.html
+++ b/phylogenize_app/templates/results.html
@@ -41,7 +41,7 @@ $('head').append('<meta http-equiv="refresh" content="300"/>');
   <div class="container infobox">
     <center>
       {% if errormsg %}
-        {% if not phylo_err == '' %}
+        {% if not phylo_err %}
           Error
         {% else %}
           Error: {{ phylo_err }}
