--- a/phylogenize_app/templates/index.html
+++ b/phylogenize_app/templates/index.html
@@ -94,7 +94,9 @@
 			</div>
 			<div class="form-row">
 				<div class="col-md-12">
-					{{ form.recaptcha }}
+          {% if not config['RECAPTCHA_DISABLE'] %}
+  					{{ form.recaptcha }}
+          {% endif %}
 					<input type="submit" value="Submit" class="btn btn-primary" formmethod="post" />
 				</div>
 			</div>
