--- a/phylogenize_app/templates/base.html
+++ b/phylogenize_app/templates/base.html
@@ -42,7 +42,7 @@
 
 			<footer class="footer">
 				<div class="container-fluid">
-					Bradley PH and Pollard KS (in preparation). The <a href="http://docpollard.org">Pollard Lab</a> is at the <a href="http://gladstone.org">Gladstone Institutes</a> in the <a href="https://gladstone.org/institutes/data-science-and-biotechnology">Institute of Data Science and Biotechnology</a>.
+					Bradley PH and Pollard KS (in preparation). The <a href="http://docpollard.org">Pollard Lab</a> is at the <a href="https://gladstone.org/institutes/data-science-and-biotechnology">Gladstone Institute of Data Science and Biotechnology</a> (GIDB).
 				</div>
 			</footer>
 
