--- a/phylogenize_app/templates/base.html
+++ b/phylogenize_app/templates/base.html
@@ -22,7 +22,7 @@
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	 <script src={{ url_for('static', filename='js/bootstrap.js') }}></script>
 
-	 <nav class="navbar navbar-expand-sm navbar-custom shadow-sm">
+	 <nav class="navbar navbar-expand-lg navbar-custom shadow-lg">
 		 <a class="navbar-brand" href="/">phylogenize (v0.4 alpha)</a>
 		 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false" aria-controls="bs-example-navbar-collapse-1" aria-label="Toggle navigation">
 			 <b><i>ϕ</i></b>
