--- a/phylogenize_app/templates/tutorial.html
+++ b/phylogenize_app/templates/tutorial.html
@@ -180,7 +180,8 @@ provided a <a href="{{ url_for('static', filename="hmp-16s.biom"}}">BIOM dataset
 Microbiome Project, re-analyzed with DADA2. (The data are read counts, merged
 by individual. The various regions sequenced of the 16S gene are provided in a
 single file. Reads corresponding to different samples from the same individual
-have been summed.)</p>
+have been summed.) <b>Note</b>: this is a large dataset, so it may take a long
+time to run (on the order of an hour).</p>
 <p>You will have to provide an environment to calculate either specificity or
 prevalence. The
 various environments represented in this dataset are:
@@ -202,12 +203,19 @@ various environments represented in this dataset are:
 <li>Tongue dorsum</li>
 <li>Vaginal introitus</li>
 </ul>
+<p>
+If you would just like to look at a sample report, you can view that <a
+                                         href="{{
+                                         url_for('display_result_file',
+                                         result_id='6e7dc74d-98f8-47b0-9e48-cba06abc4961',
+                                         subfile='phylogenize-report.html')
+                                         }}">here</a>.</p>
 </p>
 <h1 id="troubleshooting">Troubleshooting</h1>
 <ul>
 <li><em>phylogenize</em> appears to be stuck a little over halfway through.
 <ul>
-<li>This is probably normal; the progress bar is approximate and this is likely to be the step where associations are actually calculated. If you check back in several minutes, you should see more subtle signs of progress under &quot;monitor warnings/errors.&quot;</li>
+<li>This is probably totally normal; the progress bar is approximate and this is likely to be the step where associations are actually calculated. If you check back in several minutes, you should see more subtle signs of progress under &quot;monitor warnings/errors.&quot;</li>
 </ul>
 <li><em>phylogenize</em> doesn't appear to be running my job: the bar is stuck at 0%.
 <ul>
