--- a/phylogenize_app/templates/base.html
+++ b/phylogenize_app/templates/base.html
@@ -23,7 +23,7 @@
 	 <script src={{ url_for('static', filename='js/bootstrap.js') }}></script>
 
 	 <nav class="navbar navbar-expand-lg navbar-custom shadow-lg">
-		 <a class="navbar-brand" href="/">phylogenize (v0.4 alpha)</a>
+		 <a class="navbar-brand" href="/">phylogenize (v0.8 beta)</a>
 		 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false" aria-controls="bs-example-navbar-collapse-1" aria-label="Toggle navigation">
 			 <b><i>ϕ</i></b>
 		 </button>
