--- a/phylogenize_app/templates/tutorial.html
+++ b/phylogenize_app/templates/tutorial.html
@@ -205,7 +205,7 @@ various environments represented in this dataset are:
 </ul>
 <p>
 If you would just like to look at a sample report, you can view one 
-<a href="{{ url_for('static', result_id='phylogenize-report-demo.html') }}">here</a>.</p>
+<a href="{{ url_for('static', filename='phylogenize-report-demo.html') }}">here</a>.</p>
 
 <h1 id="troubleshooting">Troubleshooting</h1>
 <ul>
