--- a/phylogenize_app/templates/about.html
+++ b/phylogenize_app/templates/about.html
@@ -50,7 +50,7 @@
 <section><p>
 <div class="container">
 
-	{{ infotitle("How to cite <i>phylogenize</i>") }} If you used <i>phylogenize</i> and found it helpful, please cite the web tool and/or the method as below:<p>
+	{{ infotitle("How to cite phylogenize") }} If you used <i>phylogenize</i> and found it helpful, please cite the web tool and/or the method as below:<p>
 	<blockquote><u>Tool:</u> Bradley PH and Pollard KS, "<i>phylogenize</i>: a web tool to identify microbial genes underlying environment associations." Submitted; preprint forthcoming.</blockquote>
 	<blockquote><u>Method:</u> Bradley PH, Nayfach S, and Pollard KS, "Phylogeny-corrected identification of microbial gene families relevant to human gut colonization." <i>PLOS Comput Biol</i> 14 (8), e1006242.</blockquote>
 					<p>
